# tauri-chat

./: .env  package-lock.json  package.json
src/: index.html  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: database.rs  main.rs  utils.rs
